--- a/index.html
+++ b/index.html
@@ -1,20 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
+<head>
 
-        <meta charset="UTF-8" />
+    <link rel="stylesheet" href="">
+    <meta charset="UTF-8" />
 
-        <title>Run Buddy</title>
+    <title>Run Buddy</title>
 
-    </head>
+</head>
 
-    <body>
+<body>
 
+    <!-- Navigation -->
+    <header>
         <h1>RUN BUDDY</h1>
+    </header>
 
-        What We Do What You Do Your Trainers Reach Out
+    <!-- Jumbotron -->
+    <section>
 
-    </body>
+    </section>
+
+    <!-- What We Do Section -->
+    <section>
+        <h2>what We Do</h2>
+    </section>
+
+    <!-- "What you Do" Section -->
+    <section>
+        <h2>What You Do</h2>
+    </section>
+
+    <!-- "Meet The Trainers" Section -->
+    <section>
+        <h2>Meet The Trainers</h2>
+    </section>
+
+    <!-- "Reach Out" Section -->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <h2>❤ Made with love by Run Buddy</h2>
+    </footer>
+
+
+</body>
 
 </html>
