--- a/index.html
+++ b/index.html
@@ -14,7 +14,32 @@
 
     <!-- Navigation -->
     <header>
-        <h1>RUN BUDDY</h1>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
+        <nav>
+
+            <!--Unordered list-->
+            <ul>
+
+                <li>
+                    <!--Anchor eelement-->
+                    <a href="#what-we-do">What We Do</a>
+                </li>
+
+                <li>
+                    <a href="#what-you-do">What You do</a>
+                </li>
+
+                <li>
+                    <a href="#your-trainers">Your Trainers</a>
+                </li>
+
+                <li>
+                    <a href="#reach-out">Reach Out</a>
+                </li>
+
+            </ul>
     </header>
 
     <!-- Jumbotron -->
