--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-
-    <link rel="stylesheet" href="">
+    <!--CSS Linking-->
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <meta charset="UTF-8" />
 
     <title>Run Buddy</title>
@@ -14,9 +14,12 @@
 
     <!-- Navigation -->
     <header>
+
         <h1>
+            <!--Return to home-->
             <a href="/">RUN BUDDY</a>
         </h1>
+
         <nav>
 
             <!--Unordered list-->
@@ -40,6 +43,9 @@
                 </li>
 
             </ul>
+
+        </nav>
+
     </header>
 
     <!-- Jumbotron -->
