--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <!--CSS Linking-->
     <link rel="stylesheet" href="./assets/css/style.css" />
+
     <meta charset="UTF-8" />
 
     <title>Run Buddy</title>
@@ -48,10 +49,63 @@
 
     </header>
 
-    <!-- Jumbotron -->
+    <!-- get started today section -->
     <section>
 
+        <div>
+            <h3>Get Started Today</h3>
+
+            <p>Fill out this form and one of our trainers will schedulel a consult</p>
+
+            <form>
+
+                <!-- Full name -->
+                <label for="name">Enter full name</label>
+
+                <input type="text" placeholder="Your Name" name="name" id="name" />
+
+                <!-- Email -->
+                <label for="email">Enter email address</label>
+
+                <input type="email" placeholder="Email Address" name="email" id="email" />
+
+                <!-- Phone number -->
+                <label for="phone">Enter a telephone number</label>
+
+                <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+
+                <!-- Radio Button-->
+
+                <p>
+                    Have you worked with a trainer before?
+
+                    <input type="radio" name="trainer-confirm" id="trainer-yes" />
+
+                    <label for="trainer-yes">Yes</label>
+
+                    <input type="radio" name="trainer-confirm" id="trainer-no" />
+
+                    <label for="trainer-no">No</label>
+                </p>
+
+                <p>
+
+                    <label for="atleast-18">I acknowledge that I am at least 18 years of age</label>
+
+                    <input type="checkbox" name="at-least-18" id="atleast-18" />
+
+                </p>
+
+                <button type="submit">
+                    Get running!
+                </button>
+
+            </form>
+
+        </div>
+
     </section>
+    <!-- End of get started section -->
 
     <!-- What We Do Section -->
     <section>
@@ -75,7 +129,14 @@
 
     <!-- Footer -->
     <footer>
+
         <h2>❤ Made with love by Run Buddy</h2>
+
+        <div>
+            <a href="#">Read Our Privacy Policy</a><br />
+            &copy; 2019 Run Buddy, Inc.
+        </div>
+
     </footer>
 
 
