--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
     </header>
 
-    <!-- get started today section -->
-    <section>
+    <!-- get started today section A.K.A "hero-form" -->
+    <section class="hero">
 
-        <div>
+        <div class="hero-form">
             <h3>Get Started Today</h3>
 
             <p>Fill out this form and one of our trainers will schedulel a consult</p>
@@ -62,17 +62,17 @@
                 <!-- Full name -->
                 <label for="name">Enter full name</label>
 
-                <input type="text" placeholder="Your Name" name="name" id="name" />
+                <input type="text" placeholder="Your Name" name="name" id="name" class="form-input" />
 
                 <!-- Email -->
                 <label for="email">Enter email address</label>
 
-                <input type="email" placeholder="Email Address" name="email" id="email" />
+                <input type="email" placeholder="Email Address" name="email" id="email" class="form-input" />
 
                 <!-- Phone number -->
                 <label for="phone">Enter a telephone number</label>
 
-                <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+                <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input" />
 
                 <!-- Radio Button-->
 
