sttyle what we do section

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- End of get started section -->
 
     <!-- What We Do Section -->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
         <h2>what We Do</h2>
 
         <p> butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct
@@ -122,7 +122,8 @@
 
     <!-- "What you Do" Section -->
     <section id="what-you-do">
-        <h2>What You Do</h2>
+        <h2>what you do</h2>
+
 
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
