--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <!-- What We Do Section -->
     <section id="what-we-do" class="intro">
-        <h2>what We Do</h2>
+        <h2 class="section-titel primary-border">what We Do</h2>
 
         <p> butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct
             trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie
@@ -121,13 +121,13 @@
     </section>
 
     <!-- "What you Do" Section -->
-    <section id="what-you-do">
-        <h2>what you do</h2>
+    <section id="what-you-do" class="steps">
+        <h2 class="section-title secondary-border">what you do</h2>
 
 
         <div>
             <img src="./assets/images/step-1.svg" alt="" />
-            <h3>Step 1: Fill out the Form Above</h3>
+            <h3>Step 1: <span>Fill out the Form Above.</span></h3>
             <p>You're already here, so why not?</p>
         </div>
 
